Connect user and improve app
